YAML!/email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  labels:
    app: kyc-email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyc-email-service
  template:
    metadata:
      labels:
        app: kyc-email-service
    spec:
      containers:
        - name: email-service
          image: riko04/email-service:v2.0
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          
---

apiVersion: v1
kind: Service
metadata:
  name: kyc-email-service
spec:
  type: ClusterIP
  selector:
    app: kyc-email-service
  ports:
    - port: 8082
      targetPort: 8082
