YAML!/kycFrontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: kyc-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyc-frontend
  template:
    metadata:
      labels:
        app: kyc-frontend
    spec:
      containers:
        - name: frontend
          image: riko04/kyc-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: kyc-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
