YAML!/rabbitMq.yaml
# --- Deployment for RabbitMQ ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
---
# --- Service to expose RabbitMQ internally ---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
# ---
# --- Ingress rule for RabbitMQ UI ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: rabbitmq-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/enable-cors: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: rabbitmq.erickyc.store
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: rabbitmq
#                 port:
#                   number: 15672
