YAML!/reportFrontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-frontend
  labels:
    app: report-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-frontend
  template:
    metadata:
      labels:
        app: report-frontend
    spec:
      containers:
        - name: report-frontend
          image: riko04/reports-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: report-frontend
spec:
  selector:
    app: report-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
