YAML!/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, X-Requested-With"
spec:
  ingressClassName: nginx
  rules:
    - host: erickyc.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

    - host: reports.erickyc.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: report-frontend
                port:
                  number: 80

    - host: api.erickyc.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

    - host: eureka.erickyc.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 9099

    - host: rabbitmq.erickyc.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672

    - host: grafana.erickyc.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 80

    - host: prometheus.erickyc.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090

    - host: kibana.erickyc.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
